--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.improvement.self.awesome">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,7 +28,10 @@
             android:name=".content"
             android:label="@string/title_activity_content"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".power"></activity>
+        <activity android:name=".power" />
+        <activity
+            android:name=".Login"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
