--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.improvement.self.awesome">
-
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
@@ -17,14 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity
-            android:name=".RestPost"
-            android:label="@string/title_activity_rest_post" />
-        <activity
-            android:name=".RestFul"
-            android:label="@string/title_activity_rest_ful"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".FlaskRestDemo"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -35,10 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".content"
-            android:label="@string/title_activity_content"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".power" />
     </application>
 
